# AED2.GarbageCollector-Simulation

./: CMakeLists.txt  Collector.cpp  Collector.h  CollectorNode.cpp  CollectorNode.h  List.cpp  List.h  Node.cpp  Node.h  README.md  main.cpp
